@@ -27,3 +27,4 @@
 ( cvs diff -u -r 1.1.2.33 -r 1.1.2.34 src/vcal_meeting_gtk.c;  cvs diff -u -r 1.1.2.11 -r 1.1.2.12 src/vcal_prefs.c;  ) > 1.79.2cvs18.patchset
 ( cvs diff -u -r 1.1.2.34 -r 1.1.2.35 src/vcal_meeting_gtk.c;  ) > 1.79.2cvs19.patchset
 ( cvs diff -u -r 1.1.2.5 -r 1.1.2.6 po/fr.po;  ) > 1.79.2cvs20.patchset
+( cvs diff -u -r 1.1.2.35 -r 1.1.2.36 src/vcal_meeting_gtk.c;  cvs diff -u -r 1.2.2.39 -r 1.2.2.40 src/vcalendar.c;  ) > 1.79.2cvs21.patchset
