@@ -1,3 +1,11 @@
+2006-09-07 [colin]	1.79.2cvs21
+
+	* src/vcal_meeting_gtk.c
+	* src/vcalendar.c
+		Fix refresh
+		Check our own availability
+		Only check availability on new events
+
 2006-09-06 [colin]	1.79.2cvs20
 
 	* po/fr.po
